// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopologyControlBar should accept button options correctly 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-toolbar default-test-class"
    data-ouia-component-id="OUIA-Generated-Toolbar-:re:"
    data-ouia-component-type="PF6/Toolbar"
    data-ouia-safe="true"
    id="pf-topology-control-bar-:rc:"
    style="background-color: transparent;"
  >
    <div
      class="pf-v6-c-toolbar__content"
    >
      <div
        class="pf-v6-c-toolbar__content-section"
      >
        <div
          class="pf-v6-c-toolbar__group pf-m-gap-none"
        >
          <div
            class="pf-v6-c-toolbar__item"
          >
            <div
              style="display: contents;"
            >
              <button
                aria-describedby="pf-tooltip-:rf:"
                aria-disabled="false"
                class="pf-v6-c-button pf-m-tertiary pf-topology-control-bar__button"
                data-ouia-component-id="OUIA-Generated-Button-tertiary-:rg:"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                id="zoom-in"
                type="button"
              >
                <span
                  class="pf-v6-c-button__text"
                >
                  <span>
                    test zoom in
                  </span>
                  <span
                    class="pf-v6-screen-reader"
                  >
                    test-zoom-in-aria-label
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            class="pf-v6-c-toolbar__item"
          >
            <div
              style="display: contents;"
            >
              <button
                aria-disabled="false"
                class="pf-v6-c-button pf-m-tertiary pf-topology-control-bar__button"
                data-ouia-component-id="OUIA-Generated-Button-tertiary-:ri:"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                id="zoom-out"
                type="button"
              >
                <span
                  class="pf-v6-c-button__text"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 32 32"
                    width="1em"
                  >
                    <path
                      d="m30.707 29.293-8.552-8.552A11.942 11.942 0 0 0 25 13c0-6.617-5.383-12-12-12S1 6.383 1 13s5.383 12 12 12c2.949 0 5.649-1.074 7.741-2.845l8.552 8.552a.997.997 0 0 0 1.414 0 .999.999 0 0 0 0-1.414ZM13 23C7.486 23 3 18.514 3 13S7.486 3 13 3s10 4.486 10 10-4.486 10-10 10Zm6-10a1 1 0 0 1-1 1H8a1 1 0 1 1 0-2h10a1 1 0 0 1 1 1Z"
                    />
                  </svg>
                  <span
                    class="pf-v6-screen-reader"
                  >
                    Zoom Out
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            class="pf-v6-c-toolbar__item"
          >
            <div
              style="display: contents;"
            >
              <button
                aria-disabled="true"
                class="pf-v6-c-button pf-m-tertiary pf-topology-control-bar__button pf-m-disabled"
                data-ouia-component-id="OUIA-Generated-Button-tertiary-:rk:"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                id="reset-view"
                type="button"
              >
                <span
                  class="pf-v6-c-button__text"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 32 32"
                    width="1em"
                  >
                    <path
                      d="M30 3.5V10a1 1 0 0 1-2 0V4h-6a1 1 0 0 1 0-2h6.5c.827 0 1.5.673 1.5 1.5ZM10 2H3.5C2.673 2 2 2.673 2 3.5V10a1 1 0 0 0 2 0V4h6a1 1 0 0 0 0-2Zm0 26H4v-6a1 1 0 0 0-2 0v6.5c0 .827.673 1.5 1.5 1.5H10a1 1 0 0 0 0-2Zm19-7a1 1 0 0 0-1 1v6h-6a1 1 0 0 0 0 2h6.5c.827 0 1.5-.673 1.5-1.5V22a1 1 0 0 0-1-1Z"
                    />
                  </svg>
                  <span
                    class="pf-v6-screen-reader"
                  >
                    Reset View
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v6-c-toolbar__group"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TopologyControlBar should display the default controls correctly 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-toolbar default-test-class"
    data-ouia-component-id="OUIA-Generated-Toolbar-:r2:"
    data-ouia-component-type="PF6/Toolbar"
    data-ouia-safe="true"
    id="pf-topology-control-bar-:r0:"
    style="background-color: transparent;"
  >
    <div
      class="pf-v6-c-toolbar__content"
    >
      <div
        class="pf-v6-c-toolbar__content-section"
      >
        <div
          class="pf-v6-c-toolbar__group pf-m-gap-none"
        >
          <div
            class="pf-v6-c-toolbar__item"
          >
            <div
              style="display: contents;"
            >
              <button
                aria-describedby="pf-tooltip-:r3:"
                aria-disabled="false"
                class="pf-v6-c-button pf-m-tertiary pf-topology-control-bar__button"
                data-ouia-component-id="OUIA-Generated-Button-tertiary-:r4:"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                id="zoom-in"
                type="button"
              >
                <span
                  class="pf-v6-c-button__text"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 32 32"
                    width="1em"
                  >
                    <path
                      d="m30.707 29.293-8.552-8.552A11.942 11.942 0 0 0 25 13c0-6.617-5.383-12-12-12S1 6.383 1 13s5.383 12 12 12c2.949 0 5.649-1.074 7.741-2.845l8.552 8.552a.997.997 0 0 0 1.414 0 .999.999 0 0 0 0-1.414ZM13 23C7.486 23 3 18.514 3 13S7.486 3 13 3s10 4.486 10 10-4.486 10-10 10Zm5-10a1 1 0 0 1-1 1h-3v3a1 1 0 1 1-2 0v-3H9a1 1 0 1 1 0-2h3V9a1 1 0 1 1 2 0v3h3a1 1 0 0 1 1 1Z"
                    />
                  </svg>
                  <span
                    class="pf-v6-screen-reader"
                  >
                    Zoom In
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            class="pf-v6-c-toolbar__item"
          >
            <div
              style="display: contents;"
            >
              <button
                aria-disabled="false"
                class="pf-v6-c-button pf-m-tertiary pf-topology-control-bar__button"
                data-ouia-component-id="OUIA-Generated-Button-tertiary-:r6:"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                id="zoom-out"
                type="button"
              >
                <span
                  class="pf-v6-c-button__text"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 32 32"
                    width="1em"
                  >
                    <path
                      d="m30.707 29.293-8.552-8.552A11.942 11.942 0 0 0 25 13c0-6.617-5.383-12-12-12S1 6.383 1 13s5.383 12 12 12c2.949 0 5.649-1.074 7.741-2.845l8.552 8.552a.997.997 0 0 0 1.414 0 .999.999 0 0 0 0-1.414ZM13 23C7.486 23 3 18.514 3 13S7.486 3 13 3s10 4.486 10 10-4.486 10-10 10Zm6-10a1 1 0 0 1-1 1H8a1 1 0 1 1 0-2h10a1 1 0 0 1 1 1Z"
                    />
                  </svg>
                  <span
                    class="pf-v6-screen-reader"
                  >
                    Zoom Out
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            class="pf-v6-c-toolbar__item"
          >
            <div
              style="display: contents;"
            >
              <button
                aria-disabled="false"
                class="pf-v6-c-button pf-m-tertiary pf-topology-control-bar__button"
                data-ouia-component-id="OUIA-Generated-Button-tertiary-:r8:"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                id="fit-to-screen"
                type="button"
              >
                <span
                  class="pf-v6-c-button__text"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 32 32"
                    width="1em"
                  >
                    <path
                      d="M30 3.5V10a1 1 0 1 1-2 0V5.414l-7.293 7.293a.997.997 0 0 1-1.414 0 .999.999 0 0 1 0-1.414L26.586 4H22a1 1 0 1 1 0-2h6.5c.827 0 1.5.673 1.5 1.5ZM29 21a1 1 0 0 0-1 1v4.586l-7.293-7.293a.999.999 0 1 0-1.414 1.414L26.586 28H22a1 1 0 1 0 0 2h6.5c.827 0 1.5-.673 1.5-1.5V22a1 1 0 0 0-1-1ZM5.414 4H10a1 1 0 1 0 0-2H3.5C2.673 2 2 2.673 2 3.5V10a1 1 0 1 0 2 0V5.414l7.293 7.293a.997.997 0 0 0 1.414 0 .999.999 0 0 0 0-1.414L5.414 4Zm5.879 15.293L4 26.586V22a1 1 0 1 0-2 0v6.5c0 .827.673 1.5 1.5 1.5H10a1 1 0 1 0 0-2H5.414l7.293-7.293a.999.999 0 1 0-1.414-1.414Z"
                    />
                  </svg>
                  <span
                    class="pf-v6-screen-reader"
                  >
                    Fit to Screen
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            class="pf-v6-c-toolbar__item"
          >
            <div
              style="display: contents;"
            >
              <button
                aria-disabled="false"
                class="pf-v6-c-button pf-m-tertiary pf-topology-control-bar__button"
                data-ouia-component-id="OUIA-Generated-Button-tertiary-:ra:"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                id="reset-view"
                type="button"
              >
                <span
                  class="pf-v6-c-button__text"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 32 32"
                    width="1em"
                  >
                    <path
                      d="M30 3.5V10a1 1 0 0 1-2 0V4h-6a1 1 0 0 1 0-2h6.5c.827 0 1.5.673 1.5 1.5ZM10 2H3.5C2.673 2 2 2.673 2 3.5V10a1 1 0 0 0 2 0V4h6a1 1 0 0 0 0-2Zm0 26H4v-6a1 1 0 0 0-2 0v6.5c0 .827.673 1.5 1.5 1.5H10a1 1 0 0 0 0-2Zm19-7a1 1 0 0 0-1 1v6h-6a1 1 0 0 0 0 2h6.5c.827 0 1.5-.673 1.5-1.5V22a1 1 0 0 0-1-1Z"
                    />
                  </svg>
                  <span
                    class="pf-v6-screen-reader"
                  >
                    Reset View
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            class="pf-v6-c-toolbar__item"
          >
            <button
              aria-disabled="false"
              class="pf-v6-c-button pf-m-tertiary pf-topology-control-bar__button"
              data-ouia-component-id="OUIA-Generated-Button-tertiary-:rb:"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              id="legend"
              type="button"
            >
              <span
                class="pf-v6-c-button__text"
              >
                Legend
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v6-c-toolbar__group"
      />
    </div>
  </div>
</DocumentFragment>
`;
